<?xml version="1.0"?>
<package format="2">
  <name>navit_controller</name>
  <version>0.0.0</version>
  <description>The navit_controller package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="max@todo.todo">max</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>navit_costmap</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>navit_core</build_depend>
  <build_depend>navit_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>navit_common</build_depend>
  <build_depend>navit_localplanner</build_depend>
  <build_depend>navit_collision_checker</build_depend>

  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>navit_costmap</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>navit_core</build_export_depend>
  <build_export_depend>navit_msgs</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>navit_common</build_export_depend>
  <build_export_depend>navit_localplanner</build_export_depend>
  <build_export_depend>navit_collision_checker</build_export_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>navit_costmap</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>navit_core</exec_depend>
  <exec_depend>navit_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>navit_common</exec_depend>
  <exec_depend>navit_localplanner</exec_depend>
  <exec_depend>navit_collision_checker</exec_depend>

  <!-- <depend>backward_ros</depend> -->
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
      <nodelet plugin="${prefix}/controller_server_nodelet.xml" />

  </export>
</package>
