<?xml version="1.0"?>
<package format="2">
  <name>navit_stack</name>
  <version>0.0.0</version>
  <description>The navit_stack package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="yijiahe@todo.todo">yijiahe</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>navit_auto_dock</exec_depend>
  <exec_depend>navit_bt_navigator</exec_depend>
  <exec_depend>navit_bt_nodes</exec_depend>
  <exec_depend>navit_collision_checker</exec_depend>
  <exec_depend>navit_controller</exec_depend>
  <exec_depend>navit_core</exec_depend>
  <exec_depend>navit_costmap</exec_depend>
  <exec_depend>navit_localization</exec_depend>
  <exec_depend>navit_map_server</exec_depend>
  <!-- <exec_depend>navit_move_base</exec_depend> -->
  <exec_depend>navit_msgs</exec_depend>
  <exec_depend>navit_planner</exec_depend>
  <exec_depend>navit_recovery</exec_depend>
  <exec_depend>navit_routing</exec_depend>
  <exec_depend>navit_utils</exec_depend>
  <exec_depend>navit_velocity_smoother</exec_depend>
  <exec_depend>navit_drivers</exec_depend>
  <exec_depend>navit_plugins</exec_depend>
  <exec_depend>navit_rviz_panel</exec_depend>
  <exec_depend>navit_common</exec_depend>
  <exec_depend>navit_collision_monitor</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage/>
  </export>
</package>
